trying to correct navbar overlap

--- a/style.css
+++ b/style.css
@@ -134,7 +134,9 @@ p {
 	font-family: "helvetica", times, serif;
 	font-size: 14px;
 	color: black;
-	padding: 10px 180px 0px 180px;
+	position: absolute;
+	left: 12em;
+	right: 0;
 }
 
 /*img {
@@ -142,7 +144,9 @@ p {
 }
 */
 footer {
-	padding: 10px 180px 0px 180px;
+	position: absolute;
+	left: 12em;
+	right: 0;
 	font-family: "helvetica", times, serif;
 	font-size: 14px;
 	color: black;
@@ -152,7 +156,9 @@ h2 {
 	font-family: "helvetica", times, serif;
 	font-size: 25px;
 	color: #BA84CB;
-	padding: 10px 180px 0px 180px;
+	position: absolute;
+	left: 12em;
+	right: 0;
 }
 
 .safetyHeading {
